# skye3d

./: .gitignore  .prettierrc  CMakeLists.txt  LICENSE  README.md  commands.txt  crash.txt  main.cpp
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
build-win/src/lib/imgui/: cmake_install.cmake
build-win/src/lib/raylib/: CTestTestfile.cmake  cmake_install.cmake
build-win/src/lib/raylib/raylib/: CTestTestfile.cmake  cmake_install.cmake  raylib.pc
build-win/src/lib/rlImGui/: cmake_install.cmake
gamedata/: LICENSE  bindings.cfg  docs.md  settings.cfg
gamedata/models/monster_shotgunner/: monster_shotgunner_nowep.glb
gamedata/scripts/: cs_manifest.cfg  sh_manifest.cfg  sv_manifest.cfg
gamedata/scripts copy/: cs_manifest.cfg  sh_manifest.cfg  sv_manifest.cfg
gamedata/scripts copy/client/: cs_draw.nut  cs_globals.nut  cs_network.nut  cs_update.nut
gamedata/scripts copy/server/: sv_func_door.nut  sv_player.nut  sv_update.nut
gamedata/scripts copy/shared/: sh_input.nut
gamedata/scripts/client/: cs_draw.lua  cs_draw_gui.lua  cs_draw_gui.nut  cs_func_door.lua  cs_globals.lua  cs_hud.lua  cs_init.lua  cs_init.nut  cs_network.lua  cs_network.nut  cs_network_events.lua  cs_network_events.nut  cs_player.lua  cs_player.nut  cs_update.lua  cs_update.nut
gamedata/scripts/server/: sv_entities.nut  sv_func_door.lua  sv_func_door.nut  sv_init.lua  sv_init.nut  sv_monster_ogre.lua  sv_network.lua  sv_network.nut  sv_network_events.lua  sv_network_events.nut  sv_player.lua  sv_player.nut  sv_update.lua  sv_update.nut
gamedata/scripts/shared/: sh_globals.lua  sh_globals.nut  sh_input.lua
gamedata/shaders/330/: bloom_extract.frag  blur.frag  composite.frag  debug.fs  debug.vs  lighting.frag  lighting.vert  model.fs  model.vs  postprocess.vert  sky.fs  sky.vs  vertex_displacement.fs  vertex_displacement.vs  water.fs  water.vs
src/game/: cleanup.cpp  draw.cpp  draw_gui.cpp  init.cpp  update.cpp
src/include/: bsp.h  bsp_pvs.h.bak  camera3d.h  cfg_parser.h  enet.h  engine.h  fonts.h  gamemodel.h  gameobject3d.h  global.h  hud.h  input_bindings.h  lua.h  lua.hpp  net_utils.h  server_handlers.h  server_ops.h  skyeui.h  sq.h
src/include/gameobjects/: brush_entity.h  player.h
src/lib/: LICENSE
src/lib/enet/include/: enet.h  protocol.h
src/lib/lua/: LICENSE
src/lib/lua/include/: lua.h  luaconf.h
src/lib/raygui/styles/custom/: dark.rgs  green.rgs  purple.rgs  skyeblue.rgs  skyeblue2.rgs  skyered.rgs
src/lib/raylib/src/: rlights.h  rtext.c
src/lib/squirrel/include/: squirrel.h
src/system/: client.cpp  gameobject3d.cpp  lua.cpp  server.cpp  server_ops.cpp  skyeui.cpp  sq.cpp  sqold.cppbak
